--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    
+    <title>Recipe Application</title>
+<!-- google fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Open+Sans&display=swap" 
+rel="stylesheet">
+<!-- fonts awesome -->
+<script src="https://kit.fontawesome.com/253a5a0c1e.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
